<resources>
    <string name="app_name">Мои фильмы</string>
    <string name="poster_movie">Постер к фильму</string>
    <string name="textview_popularity_switch">Популярные</string>
    <string name="textview_vote_average_switch">Рейтинговые</string>
    <string name="detail_activity_big_poster_description">Большой постер</string>
    <string name="detail_activity_lbl_title">Название</string>
    <string name="detail_activity_lbl_original_title">Оригинальное название:</string>
    <string name="detail_activity_lbl_rating">Рейтинг:</string>
    <string name="detail_activity_lbl_release_date">Дата выхода:</string>
    <string name="detail_activity_lbl_description">Описание:</string>
    <string name="detail_activity_add_to_favorite_description">Добавить в избранное</string>
    <string name="main_menu_text_main">Главная</string>
    <string name="main_menu_text_favorite">Избранное</string>
    <string name="trailer_item_image_view_play_description">Воспроизвести</string>
    <string name="detail_activity_lbl_reviews">Отзывы:</string>

    <string name="retry">Retry</string>
    <string name="empty_string"> </string>
    <string name="placeholder_text">Здесь ничего нет</string>


    <string name="cat_bottomsheet_label_add_people">Add People</string>
    <string name="cat_bottomsheet_label_copy_link">Copy link</string>
    <string name="cat_bottomsheet_label_open_in">Open In</string>
    <string name="cat_bottomsheet_label_move">Move</string>
    <string name="cat_bottomsheet_label_available_offline">Available offline</string>
    <string name="cat_bottomsheet_label_star">Star</string>
    <string name="cat_bottomsheet_label_remove">Remove</string>
    <string name="cat_bottomsheet_label_rename">Rename</string>
    <string name="first_fragment_button_sheet_title">Фильтры</string>
    <string name="iv_poster_the_film">Постер фильма</string>
    <string name="iv_favorite">Добавить в избранное</string>



    <!--FCM-->
    <string name="notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_channel_name" translatable="false">TomorrowFilm</string>
    <string name="fcm_message">FCM Message</string>
    <!--FCM-->

    <!--Detail Fragment START-->
    <string name="df_snackBar_title_delete_completed">Удалено</string>
    <string name="df_snackBar_action_title_delete_cancel">Отменить</string>
    <string name="df_tabs_title_description">Описание</string>
    <string name="df_tabs_title_trailers">Трейлеры</string>
    <!--Detail Fragment END-->

</resources>
