<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="movie"
            type="com.example.mymovies.model.DiscoverMovieResultsItem" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/shrine_pink_100"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblTitle"
                style="@style/ActivityDetailTextViewLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/detail_activity_lbl_title" />

            <TextView
                android:id="@+id/tvTitle"
                style="@style/ActivityDetailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{movie.title}" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutOriginalTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblOriginalTitle"
                style="@style/ActivityDetailTextViewLbl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/detail_activity_lbl_original_title" />

            <TextView
                android:id="@+id/tvOriginalTitle"
                style="@style/ActivityDetailTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{movie.originalTitle}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblRating"
                style="@style/ActivityDetailTextViewLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/detail_activity_lbl_rating" />

            <TextView
                android:id="@+id/tvTitleRating"
                style="@style/ActivityDetailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{movie.voteAverage.toString()}" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblReleaseDate"
                style="@style/ActivityDetailTextViewLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/detail_activity_lbl_release_date" />

            <TextView
                android:id="@+id/tvReleaseDate"
                style="@style/ActivityDetailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{movie.releaseDate}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblDescription"
                style="@style/ActivityDetailTextViewLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/detail_activity_lbl_description" />

            <TextView
                android:id="@+id/tvDescription"
                style="@style/ActivityDetailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{movie.overview}"/>

        </LinearLayout>

    </LinearLayout>

</layout>