<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.example.mymovies.model.DiscoverMovieResultsItem" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        style="@style/Widget.Support.CoordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/shrine_pink_100"
        tools:context=".ui.mainactivity.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:elevation="4dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleTextAppearance="?attr/textAppearanceHeadline6"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleGravity="bottom"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleTextAppearance="?attr/textAppearanceHeadline5"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="match_parent"
                    android:layout_height="436dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/detail_activity_big_poster_description"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/PopupOverlay">

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="16dp"
            app:behavior_overlapTop="48dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/shrine_pink_100"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayoutTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblTitle"
                        style="@style/ActivityDetailTextViewLbl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/detail_activity_lbl_title" />

                    <TextView
                        android:id="@+id/tvTitle"
                        style="@style/ActivityDetailTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@{movie.title}" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutOriginalTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblOriginalTitle"
                        style="@style/ActivityDetailTextViewLbl"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/detail_activity_lbl_original_title" />

                    <TextView
                        android:id="@+id/tvOriginalTitle"
                        style="@style/ActivityDetailTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@{movie.originalTitle}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblRating"
                        style="@style/ActivityDetailTextViewLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/detail_activity_lbl_rating" />

                    <TextView
                        android:id="@+id/tvTitleRating"
                        style="@style/ActivityDetailTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@{movie.voteAverage.toString()}" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutReleaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblReleaseDate"
                        style="@style/ActivityDetailTextViewLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/detail_activity_lbl_release_date" />

                    <TextView
                        android:id="@+id/tvReleaseDate"
                        style="@style/ActivityDetailTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@{movie.releaseDate}" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblDescription"
                        style="@style/ActivityDetailTextViewLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/detail_activity_lbl_description" />

                    <TextView
                        android:id="@+id/tvDescription"
                        style="@style/ActivityDetailTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{movie.overview}"
                        android:textSize="42sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/detail_fragment_tab_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/detail_fragment_view_pager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>